--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,3 +1,13 @@
+body {
+  background: #660000;
+  color: white;
+}
+
+p {
+  display: inline-block;
+  margin: 10px;
+}
+
 .gameBoardArray {
   width: 600px;
   height: 600px;
@@ -11,7 +21,7 @@
 .wall {
   width: 6px;
   height: 6px;
-  background: black;
+  background: #2F4F4F;
   display: inline-block;
 }
 
@@ -55,4 +65,55 @@
   height: 6px;
   background: purple;
   display: inline-block;
+}
+
+.bossMonster {
+  width: 6px;
+  height: 6px;
+  background: orange;
+  display: inline-block;
+}
+
+.darkness {
+  width: 6px;
+  height: 6px;
+  background: black;
+  display: inline-block;
+}
+
+button {
+  background: white;
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 5px;
+  color: black;
+}
+
+h3 {
+  text-align: center;
+}
+
+#gameData {
+  text-align: center;
+}
+
+#overlay {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, .7);
+	top: 0;
+	left: 0;
+	text-align: center;
+}
+
+.modalP {
+  margin-top: 300px;
+  display: block;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.okButton {
+  width: 100px;
 }
